--- a/src/styles/JobSection.css
+++ b/src/styles/JobSection.css
@@ -218,6 +218,7 @@
 	display: flex;
 	align-items: flex-start;
 	gap: 12px;
+  flex-wrap: wrap;
 }
 .button2 {
 	flex-shrink: 0;
@@ -352,4 +353,27 @@
     max-width: none;
   }
 
+}
+
+@media screen and (max-width: 600px) {
+  .search-and-button.open{
+    top: 10px;
+    left: 43%;
+  }
+  .search-box{
+    width: 30%;
+  }
+  .search-icon{
+    display: none;
+  }
+  .search-box{
+    padding: 5px 10px;
+  }
+  .search-box input{
+    font-size: 10px;
+  }
+  .resume-btn{
+    font-size: 10px;
+    padding: 6px;
+  }
 }
